--- a/src/app/components/client folder/client/client.component.html
+++ b/src/app/components/client folder/client/client.component.html
@@ -5,8 +5,8 @@
       Profil du client
     </h2>
     <div class="card-avatar d-flex justify-content-between">
-      <button mat-fab [style]='client?.bg'>
-        {{client?.status}}
+      <button mat-fab [style]='clientBoite?.bg'>
+        {{clientBoite?.status}}
       </button>
       <div class="">
         <button class="btn btn-group btn-outline-info" width="50" height="20" (click)="modify = true">Modifier</button>
@@ -63,7 +63,7 @@
         <mat-list-item> <button [routerLink]="['/bp/'+ currentBoite?.idBoite]">Voir</button> </mat-list-item>
       </mat-nav-list>
       <mat-divider></mat-divider>
-      <button *ngIf="client?.status !== 'Resilié'" class="mt-3 btn btn-group btn-danger text-white" width="50"
+      <button *ngIf="clientBoite?.status !== 'Resilié'" class="mt-3 btn btn-group btn-danger text-white" width="50"
         height="20">Resilier</button>
 
     </div>
@@ -97,30 +97,30 @@
       </table>
     </div>
   </div>
-    <div class="col-12 col-md-5">
-      <h2>
-        <fa-icon [icon]="faMoney" class="text-danger"></fa-icon>
-        Paiements en attente
-      </h2>
-      <div class="table">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Année</th>
-              <th scope="col">Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let unpaid of unpaids">
-              <td>{{unpaid.date}}</td>
-              <td>
-                <button (click)="pay(unpaid.idClient, unpaid.date)" class="btn btn-group btn-info">Payer</button>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+  <div class="col-12 col-md-5">
+    <h2>
+      <fa-icon [icon]="faMoney" class="text-danger"></fa-icon>
+      Paiements en attente
+    </h2>
+    <div class="table">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Année</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let unpaid of unpaids">
+            <td>{{unpaid.date}}</td>
+            <td>
+              <button (click)="pay(unpaid.idClient, unpaid.date)" class="btn btn-group btn-info">Payer</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
+  </div>
 </div>
 <!-- <div class="row">
   <div class="col-12 col-md-6">
