--- a/src/app/components/bp/bp.component.html
+++ b/src/app/components/bp/bp.component.html
@@ -18,7 +18,7 @@
   <div class=" col-12 col-md-5">
 
     <button class="btn btn-danger" (click)="libererBoite()"
-      *ngIf="boite?.enabled && boite?.status === 'Resilié'">Liberer
+      *ngIf="boiteclients[0]?.enabled && boiteclients[0]?.status === 'Resilié'">Liberer
       la boite et resilier le
       client</button>
   </div>
