--- a/src/app/components/activity/activity.component.html
+++ b/src/app/components/activity/activity.component.html
@@ -1,9 +1,8 @@
-
 <div class="row">
   <div class="col-12">
     <mat-form-field appearance="fill">
       <mat-label>Filtrer par date</mat-label>
-      <input matInput [matDatepicker]="picker" readonly [(ngModel)]="date" (dateInput)="checkDate()" >
+      <input [max]="maxDate" matInput [matDatepicker]="picker" readonly [(ngModel)]="date" (dateInput)="checkDate()">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
@@ -14,18 +13,30 @@
     <mat-paginator [length]="length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions" showFirstLastButtons>
     </mat-paginator>
   </div>
-  <div class="col-sm-12 col-md-10" >
+  <div class="col-sm-12 col-md-10">
     <div class="card" *ngIf="allPayments.length>0">
       <div class="example-container mat-elevation-z8 card-body">
         <mat-table [dataSource]="datasource" matSort>
           <!-- status Column -->
+          <ng-container matColumnDef="na">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>
+              Nouvelle abonné
+            </mat-header-cell>
+            <mat-cell class="mr-2" *matCellDef="let row">
+
+              <span *ngIf="row?.NA" class="text-warning">
+                <mat-icon>star</mat-icon>
+              </span>
+            </mat-cell>
+          </ng-container>
+          <!-- name Column -->
           <ng-container matColumnDef="client">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
               Nom du client
             </mat-header-cell>
             <mat-cell class="mr-2" *matCellDef="let row">
-                <a [routerLink]="['/client/' + row.idClient]"
-                  routerLinkActive="router-link-active">{{row?.clientName}}</a>
+              <a [routerLink]="['/client/' + row.idClient]"
+                routerLinkActive="router-link-active">{{row?.clientName}}</a>
             </mat-cell>
           </ng-container>
 
@@ -76,25 +87,23 @@
   <div class="col-12 col-md-5">
     <div class=" mat-raised-button rounded border border-success p-3" style="display: block;">
       <div class="mb-5">
-        <span class="h6">La répartition des boites payées</span>
+        <span class="h6">La répartition de toute les boites payées</span>
       </div>
       <canvas *ngIf="filteredPayments.length>0" baseChart [data]="pieChartData" [labels]="pieChartLabels"
-        [chartType]="pieChartType"
-        [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
+        [chartType]="pieChartType" [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
       </canvas>
     </div>
 
   </div>
-    <div class="col-12 col-md-5">
-      <div class=" mat-raised-button rounded border border-success p-3" style="display: block;">
-        <div class="mb-5">
-          <span class="h6">La répartition en pourcentage</span>
-        </div>
-        <canvas *ngIf="filteredPayments.length>0" baseChart [data]="pieChartData2" [labels]="pieChartLabels"
-          [chartType]="pieChartType" [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
-        </canvas>
+  <div class="col-12 col-md-5">
+    <div class=" mat-raised-button rounded border border-success p-3" style="display: block;">
+      <div class="mb-5">
+        <span class="h6">La répartition des nouvelles boites attribuées</span>
       </div>
-
+      <canvas *ngIf="filteredPayments.length>0" baseChart [data]="pieChartData2" [labels]="pieChartLabels"
+        [chartType]="pieChartType" [options]="pieChartOptions" [plugins]="pieChartPlugins" [legend]="pieChartLegend">
+      </canvas>
     </div>
-</div>
 
+  </div>
+</div>
