--- a/src/app/components/client folder/client/client.component.html
+++ b/src/app/components/client folder/client/client.component.html
@@ -1,36 +1,39 @@
 <div class="row d-flex justify-content-between">
-  <div class=" col-12 col-md-5 rounded border" *ngIf="!modify">
+  <div class=" col-12 col-md-3" *ngIf="!modify">
     <h2>
       <fa-icon [icon]="faUser"></fa-icon>
       Profil du client
     </h2>
-    <div class="card-avatar d-flex justify-content-between">
-      <button mat-fab [style]='clientBoite?.bg'>
-        {{clientBoite?.status}}
-      </button>
-      <div class="">
-        <button class="btn btn-group btn-outline-info" width="50" height="20" (click)="modify = true">Modifier</button>
+    <div class="card p-2">
+      <div class="card-avatar mt-2 d-flex justify-content-between">
+        <button mat-fab [style]='clientBoite?.bg'>
+          {{clientBoite?.status}}
+        </button>
+        <div class="">
+          <button class="btn btn-group btn-outline-info" width="50" height="20"
+            (click)="modify = true">Modifier</button>
+        </div>
+      </div>
+      <div>
+        <mat-nav-list>
+          <mat-list-item class="font-weight-bold small text-center">
+            <h4>{{ client?.name }}</h4>
+          </mat-list-item>
+          <mat-list-item> Telephone: {{ client?.number }} </mat-list-item>
+          <mat-list-item> Type de client: {{ client?.clientType }} </mat-list-item>
+          <mat-list-item> Addresse: {{ client?.address }}</mat-list-item>
+          <mat-list-item> Email: {{ client?.email }} </mat-list-item>
+        </mat-nav-list>
+
       </div>
     </div>
-    <div class="card-body">
-      <mat-nav-list>
-        <mat-list-item class="card-header text-center">
-          <h4>{{ client?.name }}</h4>
-        </mat-list-item>
-        <mat-list-item> Telephone: {{ client?.number }} </mat-list-item>
-        <mat-list-item> Type de client: {{ client?.clientType }} </mat-list-item>
-        <mat-list-item> Addresse: {{ client?.address }}</mat-list-item>
-        <mat-list-item> Email: {{ client?.email }} </mat-list-item>
-      </mat-nav-list>
-
-    </div>
   </div>
-  <div class=" col-12 col-md-5 rounded border" *ngIf="modify">
+  <div class=" col-12 col-md-3 " *ngIf="modify">
     <h2>
       <fa-icon [icon]="faUser"></fa-icon>
       Modifier le client
     </h2>
-    <div class="card-avatar d-flex justify-content-between">
+    <div class="card-avatar rounded border d-flex justify-content-between">
       <img class="img img-thumbnail" width="100" [src]="client?.photo" />
       <div class="">
         <button class="btn btn-group btn-outline-danger" width="50" height="20"
@@ -52,24 +55,42 @@
 
     </div>
   </div>
-  <div class="col-12 col-md-5 rounded border">
+  <div class="col-12 col-md-3">
     <h2>
       <fa-icon [icon]="faBox"></fa-icon>
       Boite Postale
     </h2>
-    <div class="card-body">
+    <div class="card">
       <mat-nav-list>
         <mat-list-item> Numero de la boite: {{ currentBoite?.boiteNumber }} </mat-list-item>
         <mat-list-item> <button [routerLink]="['/bp/'+ currentBoite?.idBoite]">Voir</button> </mat-list-item>
       </mat-nav-list>
-      <mat-divider></mat-divider>
-      <button *ngIf="clientBoite?.status !== 'Resilié'" class="mt-3 btn btn-group btn-danger text-white" width="50"
-        height="20">Resilier</button>
+      <div class="mt-5 mr-auto ml-auto mb-2">
+        <button class="mt-5" *ngIf="clientBoite?.status !== 'Resilié'" class="mt-3 btn btn-group btn-danger text-white"
+          width="50" height="20">Resilier</button>
+      </div>
 
     </div>
 
   </div>
+  <div class="col-12 col-md-6 rounded border">
+    <h2>
+      <fa-icon [icon]="faBox"></fa-icon>
+      Historique des operations
+    </h2>
+    <div class="d-flex justify-content-between">
+      <span *ngIf="myoperations.length<1">Aucune operation à ce jour</span>
+      <button class="btn btn-group btn-info" (click)="goOperation()">Effectuer une
+        operation</button>
+    </div>
+    <ul class=" list-group">
+      <li class="list-group-item" *ngFor="let operation of myoperations">{{operation.nameOpeation}} :
+        {{operation.price}} Fdj pour la boite {{operation.boiteNumber}}</li>
+    </ul>
+
+  </div>
 </div>
+
 <mat-divider class="mt-2 mb-2"></mat-divider>
 
 <div class="row d-flex justify-content-between">
