--- a/src/app/components/opeations/opeations.component.html
+++ b/src/app/components/opeations/opeations.component.html
@@ -2,21 +2,22 @@
   <div class="col-12 col-md-3">
     <h3>Enregistrer une operation</h3>
     <div class="modal-body">
-      <mat-radio-group aria-label="Enregistrer" (change)="saveOperation($event)">
-        <mat-radio-button *ngFor="let operation of operations" [value]="operation._id">
-          {{operation.name}} :
-          {{operation.price}} Fdj</mat-radio-button>
-      </mat-radio-group>
+      <div class="form-check" *ngFor="let operation of operations">
+        <input type="checkbox" class="form-check-input" (change)="saveOperation($event)" value="{{operation._id}}">
+        <label class="form-check-label" for="exampleCheck1">{{operation.name}}: {{operation.price}}</label>
+      </div>
+
       <div class="d-flex justify-content-between">
-        <button class=" btn-success mt-3 small" *ngIf="newOperation"
+        <button class=" btn-success mt-3 small" *ngIf="newOperation.operations.length>0"
           [routerLink]="[ '/receipt/' + idUser, {isOperation: true}]" [state]="{ operation: newOperation }">Afficher
           le recu</button>
-        <button class=" btn-danger mt-3 small" *ngIf="newOperation">Encaisser</button>
+        <button (click)="encaisser()" class=" btn-danger mt-3 small"
+          *ngIf="newOperation.operations.length>0">Encaisser</button>
 
       </div>
     </div>
   </div>
-  <div class="col-12 col-md-6">
+  <div class=" col-12 col-md-6">
     <table class="table" *ngIf="myoperations.length>0">
       <thead>
         <tr>
@@ -26,12 +27,12 @@
           <th scope="col">Agent</th>
         </tr>
       </thead>
-      <tbody>
-        <tr *ngFor="let operation of myoperations; let i=index ">
+      <tbody *ngFor="let operations of myoperations" class="border-bottom border-info">
+        <tr *ngFor="let operation of operations.operations; let i=index ">
           <th scope="row">{{i+1}}</th>
-          <td>{{operation.nameOperation}}</td>
-          <td>{{operation.createdAt}}</td>
-          <td></td>
+          <td>{{operation?.name}}</td>
+          <td>{{operations?.createdAt}}</td>
+          <td>{{operations?.staffName}}</td>
         </tr>
       </tbody>
     </table>
