--- a/src/app/components/my-profil/my-profil.component.html
+++ b/src/app/components/my-profil/my-profil.component.html
@@ -1,26 +1,14 @@
 <div class="row">
   <div class="col-12 align-items-center">
     <img src="../../../assets/agent.png" width="70" alt="">
-    <span class="h3">Houssein Bodeh</span>
+    <span class="h3">{{staff?.name}}</span>
   </div>
   <div class="col-12 info">
     <mat-list>
       <mat-list-item class="nav-item">
-        <label class="mr-2"><em>Position:</em></label>
-        <label class="font-weight-bold">Informaticien</label>
-      </mat-list-item>
-      <mat-list-item class="nav-item">
         <label class="mr-2"><em>Email:</em></label>
-        <label class="font-weight-bold">housein@gmail.com</label>
+        <label class="font-weight-bold">{{staff?.email}}</label>
 
-      </mat-list-item>
-      <mat-list-item class="nav-item">
-        <label class="mr-2"><em>Telephone:</em></label>
-        <label class="font-weight-bold">77 88 77 88</label>
-
-      </mat-list-item>
-      <mat-list-item class="nav-item">
-        <button class="btn btn-group btn-outline-info">Changer le mot de passe</button>
       </mat-list-item>
     </mat-list>
   </div>
