--- a/src/app/components/activity/activity.component.html
+++ b/src/app/components/activity/activity.component.html
@@ -78,8 +78,8 @@
         </mat-table>
       </div>
     </div>
-    <div class="loading">
-      <mat-spinner color="warning" *ngIf="loading"></mat-spinner>
+    <div class="loading"  *ngIf="loading">
+      <mat-spinner color="warning"></mat-spinner>
     </div>
   </div>
 </div>
