--- a/src/app/components/receipt/receipt.component.html
+++ b/src/app/components/receipt/receipt.component.html
@@ -90,7 +90,7 @@
         </thead>
         <tbody>
           <tr>
-            <td>Redevance boite (2020)</td>
+            <td>Redevance boite ({{newPayment?.date}})</td>
             <td>{{newPayment?.priceBoite}}</td>
           </tr>
           <tr *ngFor="let payment of newPayment?.forfaits">
