--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,8 +16,11 @@
             placeholder="mot de passe" />
         </div>
         <div class="form-group d-flex">
-          <button class="btn btn-group btn-outline-warning text-primary" (click)="submit()">
+          <button *ngIf="!isLoading" class="btn btn-group btn-outline-warning text-primary" (click)="submit()">
             Connection
+          </button>
+          <button *ngIf="isLoading" class="btn btn-group btn-outline-warning text-primary" disabled>
+            <mat-spinner diameter=30></mat-spinner>
           </button>
         </div>
       </div>
