--- a/src/app/components/payments/check-payment/check-payment.component.html
+++ b/src/app/components/payments/check-payment/check-payment.component.html
@@ -14,8 +14,9 @@
       <li class="list-group-item">Total : {{payment?.total}}</li>
     </ul>
   </div>
-  <div class="col-12 mt-5">
+  <div class="col-12 mt-5 d-flex justify-content-around">
     <button class="btn btn-group btn-danger" (click)="cancelPayment()" *ngIf="isSuperviseur && hasPower">Annuler le
       paiement</button>
+      <button class="mt-5 align-content-center" [routerLink]="[ '/receipt/' + id]">Recu</button>
   </div>
 </div>
