--- a/src/app/components/client folder/clients/clients.component.html
+++ b/src/app/components/client folder/clients/clients.component.html
@@ -2,7 +2,7 @@
   <div class="col-sm-12 col-md-8">
     <div class="card">
       <h4 class="card-header">Clients</h4>
-      <div class="card-body menuB">
+      <div class="card-body menuB" *ngIf="isAgent || isSuperviseur || hasPower">
         <button mat-raised-button class="btn btn-success btn-sm" routerLink="/addClient">
           Ajouter un client
         </button>
